--- a/views/dashboardJson.gohtml
+++ b/views/dashboardJson.gohtml
@@ -13,229 +13,229 @@
 </head>
 <body>
 <div class="container">
-    <div class="row"
-    style="margin-top:20px;"
-    >
+    <div class="row" style="margin-top:20px;">
         <div class="column col-sm-6"><h3 class="h1-responsive">Thoth Logs (json)</h3></div>
         <div class="column col-sm-6">
             <div class="form-group">
-                <select name="range" id="date-range" class="browser-default custom-select form-control" onchange="filterDate()">
-					<option value="1">All Logs</option>
-					<option value="2">Today</option>
+                <select name="range" id="date-range" class="browser-default custom-select form-control"
+                        onchange="filterDate()">
+                    <option value="1">All Logs</option>
+                    <option value="2">Today</option>
                     <option value="3">Yesterday</option>
                     <option value="4">Last 7 Days</option>
-                    
                 </select>
             </div>
         </div>
-        
     </div>
+
     <div class="row">
-	<div class="column col-sm-12">
-		<div class="card">
-			<div class="card-header">
-				<div style="text-align: left;"><h5>Logs</h5></div>
-			</div>
-			<div class="card-body" style="background-color: black;padding:30px;height:500px;overflow:auto;">
-				<div class="content">
-					<pre id="fileData" class="white-text">{{.Data}}</pre>
-				</div>
-			</div>
-			<div class="card-footer">
-			<small class="form-text text-muted">Powered by Thoth 🙂</small>
-			</div>
-		</div>
+        <div class="column col-sm-12">
+            <div class="card">
+                <div class="card-header">
+                    <div style="text-align: left;"><h5>Logs</h5></div>
+                </div>
+                <div class="card-body" style="background-color: black;padding:30px;height:500px;overflow:auto;">
+                    <div class="content">
+                        <pre id="fileData" class="white-text">{{.Data}}</pre>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <small class="form-text text-muted">Powered by Thoth 🙂</small>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script type="text/javascript">
 
-	const passw = prompt("enter secure key");
+    const password = prompt("enter secure key");
 
-	const url = "http://{{.Host}}/auth"
+    const url = "http://{{.Host}}/auth"
 
-	
+    fetch(url, {
+        headers: {
+            key: password
+        },
+    }).then(resp => resp.json())
+        .then(data => {
+            if (data.status === "success") {
+                (() => {
+                    const data = document.getElementById("fileData");
+                    data.style.color = "white"
+                    const connection = new WebSocket("ws://{{.Host}}/ws?lastMod={{.LastMod}}");
 
-	fetch(url,{
-		headers:{
-			key:passw
-		},
-	})
-	.then(resp => resp.json())
-	.then(data => {
-		if (data.status == "success"){
-			(() => {
-				const data = document.getElementById("fileData");
-				data.style.color = "white"
-				const connection = new WebSocket("ws://{{.Host}}/ws?lastMod={{.LastMod}}");
-				connection.onclose = function (evt) {
-					data.textContent = 'Connection closed';
-				}
-				
-				connection.onmessage = function (evt) {
-					
-					var js = JSON.parse(evt.data)
-					localStorage.setItem("jsonLog",JSON.stringify(evt.data))
-					cleanData(js)
-					
-				}
-			})();
-		}else{
-			const data = document.getElementById("fileData");
-        	data.textContent = 'Invalid security key';
-		}
-	})
-	// var theData = []
-	function cleanData(dataList){
-		
-		const data = document.getElementById("fileData");
-		if(dataList.length == 0){
-			data.textContent = "No logs to show";
-		}else{
-			var dataStr = ""
-			dataList.forEach(dat => {
-				dataStr += "[" + dat.timestamp +"]   " + dat.error + "\n";
-			})
-			data.textContent = dataStr;
-		}
-		
-	}
-	function getWeek(){
-		var date = new Date()
-		var month = date.getMonth() + 1;
-		var day = date.getDate();
+                    connection.onclose = () => {
+                        data.textContent = 'Connection closed';
+                    }
 
-		dateList = []
+                    connection.onmessage = (evt) => {
+                        const js = JSON.parse(evt.data);
+                        localStorage.setItem("jsonLog", JSON.stringify(evt.data))
+                        cleanData(js)
+                    }
+                })();
+            } else {
+                const data = document.getElementById("fileData");
+                data.textContent = 'Invalid security key';
+            }
+        })
 
-		day = parseInt(day)+1
+    const cleanData = (dataList) => {
+        const data = document.getElementById("fileData");
 
-		for(var i = 1; i <= 8; i++){
-			
-			if(day == 0){
+        if (dataList.length === 0) {
+            data.textContent = "No logs to show";
+        } else {
+            let dataStr = "";
 
-				month -= 1;
+            dataList.forEach(dat => {
+                dataStr += "[" + dat.timestamp + "]   " + dat.error + "\n";
+            })
 
-				if([4,6,9,10].includes(month) ==  true){
+            data.textContent = dataStr;
+        }
 
-					day = 30
+    }
 
-				}else if (month == 2){
-					
-					day = 28; 
+    const getWeek = () => {
+        const date = new Date();
+        let month = date.getMonth() + 1;
+        let day = date.getDate();
 
-				}else{
+        let dateList = [];
 
-					day = 31
+        day = parseInt(day) + 1
 
-				}
+        let newDate;
 
-			}else{
-				day = day - 1
-			}
-			
-			if(String(month).length == 1){
-				month = "0"+month;
-			}
-			if(String(day).length == 1){
-				day = "0"+day;
-			}
+        for (let i = 1; i <= 8; i++) {
+            if (day === 0) {
+                month -= 1;
 
-			newDate = date.getFullYear() + "-" + month + "-" + day ;
-			if (day != "00"){
-				
-				dateList.push(newDate)
-			}
-		}
+                if ([4, 6, 9, 10].includes(month) === true) {
+                    day = 30
+                } else if (month === 2) {
+                    day = 28;
+                } else {
+                    day = 31
+                }
+            } else {
+                day = day - 1
+            }
 
-		return dateList
-	}
+            if (String(month).length === 1) {
+                month = "0" + month;
+            }
 
-	function filterDate(){
-		var theData = JSON.parse(JSON.parse(localStorage.getItem("jsonLog")));
-		
-		var value = document.getElementById("date-range").value;
+            if (String(day).length === 1) {
+                day = "0" + day;
+            }
 
-		if(value == "1"){
-			cleanData(theData)
-		}else{
-			switch (value){
-			case "2":
-				var filteredData = []
-				var date = new Date();
-				var month = date.getMonth() + 1;
-				var day = date.getDate()
-				if (String(month).length == 1){
-					month = "0" + month
-				}
-				if (String(day).length == 1){
-					day = "0" + day
-				}
+            newDate = date.getFullYear() + "-" + month + "-" + day;
 
-				var query = date.getFullYear() + "-" + month + "-" + day;
-				
-				theData.forEach(dat => {
-					if(dat.timestamp.includes(query) == true){
-						filteredData.push(dat)
-					}
-				})
-				cleanData(filteredData)
-				break
-			case "3":
-				var filteredData = []
-				var date = new Date();
-				var month = date.getMonth() + 1;
-				var day = date.getDate() - 1;
+            if (day !== "00") {
+                dateList.push(newDate)
+            }
+        }
 
-				
-				if(day == 0){
-					month -= 1;
-					if([4,6,9,10].includes(month) ==  true){
-						day = 30
-					}else if (month == 2){
-						// do logic for leap year
-						day = 28; 
-					}else{
-						day = 31
-					}
-				}
-				if (String(month).length == 1){
-					month = "0" + month
-				}
-				if (String(day).length == 1){
-					day = "0" + day
-				}
-				var query = date.getFullYear() + "-" + month + "-" + day;
-				
-				theData.forEach(dat => {
-					if(dat.timestamp.includes(query) == true){
-						filteredData.push(dat)
-					}
-				})
-				cleanData(filteredData)
-				break
-			case "4":
-				var filteredData = []
-				var dates = getWeek()
-				theData.forEach(dat => {
-					if(dates.includes(dat.timestamp) == true){
-						filteredData.push(dat)
-					}
-				})
-				cleanData(filteredData)
-				break
-			default:
-				break
-			}
-			
+        return dateList
+    }
 
-			
-		}
-		
-	}
+    const filterDate = () => {
+        const theData = JSON.parse(JSON.parse(localStorage.getItem("jsonLog")));
 
+        const value = document.getElementById("date-range").value;
+
+        let date = new Date();
+        let filteredData = [];
+        let month = date.getMonth() + 1;
+        let query;
+        let day;
+
+        if (value === "1") {
+            cleanData(theData)
+        } else {
+            switch (value) {
+                case "2":
+                    day = date.getDate()
+
+                    if (String(month).length === 1) {
+                        month = "0" + month
+                    }
+
+                    if (String(day).length === 1) {
+                        day = "0" + day
+                    }
+
+                    query = date.getFullYear() + "-" + month + "-" + day;
+
+                    theData.forEach(dat => {
+                        if (dat.timestamp.includes(query) === true) {
+                            filteredData.push(dat)
+                        }
+                    })
+
+                    cleanData(filteredData)
+
+                    break
+                case "3":
+                    filteredData = [];
+                    date = new Date();
+                    month = date.getMonth() + 1;
+                    day = date.getDate() - 1;
+
+
+                    if (day === 0) {
+                        month -= 1;
+                        if ([4, 6, 9, 10].includes(month) === true) {
+                            day = 30
+                        } else if (month === 2) {
+                            // do logic for leap year
+                            day = 28;
+                        } else {
+                            day = 31
+                        }
+                    }
+
+                    if (String(month).length === 1) {
+                        month = "0" + month
+                    }
+
+                    if (String(day).length === 1) {
+                        day = "0" + day
+                    }
+
+                    query = date.getFullYear() + "-" + month + "-" + day;
+
+                    theData.forEach(dat => {
+                        if (dat.timestamp.includes(query) === true) {
+                            filteredData.push(dat)
+                        }
+                    })
+
+                    cleanData(filteredData)
+
+                    break
+                case "4":
+                    let dates = getWeek()
+
+                    theData.forEach(dat => {
+                        if (dates.includes(dat.timestamp) === true) {
+                            filteredData.push(dat)
+                        }
+                    })
+
+                    cleanData(filteredData)
+
+                    break
+                default:
+                    break
+            }
+        }
+    }
 </script>
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
